# ldrtk

./: .gitignore  README.md  TEST_DEVICE_SETUP.md
backend/: app.py  install_deps.sh  requirements.txt  start.sh
backend/config/: config.py
backend/models/: mapping_state.py  navigation_state.py  user.py
backend/routes/: alignment.py  auth.py  gps_map.py  lidar_localization.py  mapping.py  maps.py  navigation.py  path.py  rtk.py
nav/launch/: bringup.launch  rosbridge.launch
nav/scripts/: env.sh  start.sh  stop.sh
nav/src/nav_fusion/: CMakeLists.txt  package.xml
nav/src/nav_fusion/config/: ekf_global.yaml  ekf_local.yaml  frame_alignment.yaml  localization_health.yaml
nav/src/nav_fusion/launch/: calibrate.launch  frame_alignment.launch  fusion_localization.launch  gcp_calibrate.launch
nav/src/nav_fusion/scripts/: calibrate_frame_alignment.py  control_point_recorder.py  localization_health_monitor.py  publish_frame_alignment.py
nav/src/nav_fusion/test/: test_quality_coverage.py  test_solver.py
nav/src/rtk_interfaces/: CMakeLists.txt  README.md  package.xml
nav/src/um982_rtk/: CMakeLists.txt  README.md  package.xml
nav/src/um982_rtk/config/: navigation.yaml  rtk.yaml
nav/src/um982_rtk/launch/: um982_rtk.launch
nav/src/um982_rtk/scripts/: um982_rtk_nav_node.py  um982_rtk_node.py
tianditu-proxy/: .gitignore  README.md  app.py  config.py  install_deps.sh  start.sh  stop.sh
web/: CESIUM_MIGRATION.md  COMPLETION_SUMMARY.md  DEV_REPORT_2026-03-16.md  MAP_MANAGEMENT_DEV_REPORT.md  MARS3D_FIX_REPORT.md  PAGE_TEST_REPORT.md  QUICK_START.md  README.md  UI_DESIGN.md  VERIFICATION_REPORT.md  index.html  package-lock.json  package.json  playwright.config.ts  test-debug.cjs  test-debug2.cjs  test-debug3.cjs  test-final-acceptance.mjs  test-gps-map.cjs  test-nav-page.js  test-path-planning.cjs  test-path-planning2.cjs  test-path-planning3.cjs  tsconfig.json  verify-mars3d.sh  vite.config.js  vitest.config.ts
web/scripts/: README.md  autotest.cjs
web/src/: App.test.jsx  config.js  index.css  main.jsx  main.test.jsx  test-login-flow.md
web/src/api/: index.ts  maps.js
web/src/components/: AlignmentControl.tsx  AlignmentGcpPanel.tsx  AuthGuard.tsx  FusionMapForManager.tsx  FusionMapView.tsx  GPSMapCreate.jsx  GPSMapView.tsx  LidarLocalizationControl.tsx  LocalMapView.tsx  MapCanvas.tsx  MapManager-modal-fix.tsx  MapManager-simple-create.tsx  MapManager.tsx  MapOperationModal.tsx  MapPreview.tsx  MappingControl.tsx  MappingPreview.tsx  MarsMap.jsx  MarsMapForManager.jsx  PathPlanning.tsx  SimpleMapCanvas.tsx  SystemHeader.tsx  UnifiedMapPreview.tsx
web/tests/: canvas-map-rewrite.spec.ts  create-map-flow.spec.ts  edit-functionality.spec.js  fusion-map-preview.spec.js  gps-map-preview.spec.js  home-after-login.spec.ts  home-html-check.spec.ts  home-page-check.spec.ts  login-page-check.spec.ts  main-features.spec.ts  map-management-core.spec.ts  map-management-direct.spec.ts  map-management-full.spec.ts  map-management.spec.ts  map-page-with-login.spec.ts  mapping-dialog.spec.js  modal-screenshots.spec.ts  screenshots-ruochengyou.spec.ts  screenshots.spec.ts  setup.ts  simple-map-test.spec.ts  ui-acceptance.spec.ts  ui-components.test.ts
(+40 files in other folders)
