<?xml version="1.0"?>
<package format="2">
  <name>nav_fusion</name>
  <version>0.1.0</version>
  <description>RTK and LiDAR frame alignment utilities.</description>

  <maintainer email="sigu@todo.todo">sigu</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>rtk_interfaces</depend>

  <exec_depend>robot_localization</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <export />
</package>
